--- a/components/personalForm/personalForm.html
+++ b/components/personalForm/personalForm.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/components/personalForm/personalFormStyle.css">
 
-<div class="view__container" ng-model-options="{allowInvalid: true, debounce: 200}" ng-cloak>
-    <form class="newUser__form" name="$ctrl.form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+<div class="component__view__container" ng-model-options="{allowInvalid: true, debounce: 200}" ng-cloak>
+    <form name="$ctrl.form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
         <h3>Name: </h3>
         <input type="text" placeholder="Name user" ng-required="true" ng-model="$ctrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
         <h3>E-mail: </h3>
