--- a/components/personalForm/personalFormStyle.css
+++ b/components/personalForm/personalFormStyle.css
@@ -1,4 +1,4 @@
-.view__container{
+.component__view__container{
     width: 100%;
     min-height: 600px;
     max-height: 1000px;
@@ -8,4 +8,21 @@
     align-items: center;
     border-bottom: 2px solid white;
     background-color: rgba(0, 0, 0, 0.4);
+}
+.component__view__container form{
+    border: 1.5px dotted white;
+    padding: 20px;
+    border-radius: 3px 3px 3px 3px;
+}
+.component__view__container form input{
+    width: 300px;
+    height: 25px;
+    box-sizing: content-box;
+    background-color: white;
+    border: 2px solid rgba(0, 0, 0, 0.4);
+    border-radius: 5px 5px 5px 5px;
+}
+.component__view__container form input::-webkit-input-placeholder{
+    color: black;
+    padding-left: 5px;
 }
