--- a/views/home.html
+++ b/views/home.html
@@ -48,36 +48,26 @@
                     user='HomeCtrl.user'>
                 </gifs-container>
                 <!-- Container Marvel -->
-                <div class="view__container__favourite" ng-show="HomeCtrl.showView == 'Marvel'" ng-hide="HomeCtrl.showView != 2">
-                    <div class="view__favourite__container">
-                        <div class="view__favourite" ng-repeat="marvel in HomeCtrl.user.marvel track by marvel.id">
-                            <img class="view__favourite__photo" ng-click="HomeCtrl.deleteTypeFav('Marvel',marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
-                        </div>
-                    </div>
-                    <div class="user__search">
-                        <form name="HomeCtrl.formSM">
-                            <input type="text" placeholder="Search Marvel" ng-model="HomeCtrl.search_marvel.text" ng-required="true" ng-minlength="1">
-                            <select class="user__search__select" ng-model="HomeCtrl.typeMarvel" ng-required="true">
-                                <option disabled selected value> Please Select Marvel Type </option>
-                                <option ng-repeat="marvel in HomeCtrl.marvelListSelect track by $index">{{marvel}}</option>
-                            </select>
-                        </form>
-                        <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getTypesUser('Marvel','no')" ng-class="{borderGreenStyle:HomeCtrl.formSM.$valid}">Search Marvel</button>
-                    </div>
-                    <slider-marvel 
-                        style="width:100%; height:500px"
-                        marvels='HomeCtrl.marvelList' 
-                        arrow-left='HomeCtrl.ArrowLeft'
-                        arrow-right='HomeCtrl.ArrowRight'
-                        get-marvel='HomeCtrl.getTypesUser(type,offset,direction)'
-                        check-marvel='HomeCtrl.checkTypeUser(type,id)'
-                        add-marvel-fav="HomeCtrl.addTypeFav(type,data)">
-                    </slider-marvel>
-                </div>
+                <marvel-container
+                    style="width:100%; height:800px"
+                    ng-show="HomeCtrl.showView == 'Marvel'"
+                    user='HomeCtrl.user'>
+                </marvel-container>
                 <!-- Container button Create and Modify -->
                 <div class="button__User">
-                    <button ng-if="!HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-class="{borderGreenStyle:HomeCtrl.checkValid()}" ng-click="HomeCtrl.addNewUser()">Create</button>
-                    <button ng-if="HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-class="{borderGreenStyle:HomeCtrl.checkValid()}" ng-click="HomeCtrl.modifyUser()">Modify</button>
+                    <button 
+                        ng-if="!HomeCtrl.edit" 
+                        ng-disabled="!HomeCtrl.checkValid()" 
+                        ng-class="{borderGreenStyle:HomeCtrl.checkValid()}" 
+                        ng-click="HomeCtrl.addNewUser()">
+                        Create
+                    </button>
+                    <button ng-if="HomeCtrl.edit" 
+                        ng-disabled="!HomeCtrl.checkValid()" 
+                        ng-class="{borderGreenStyle:HomeCtrl.checkValid()}" 
+                        ng-click="HomeCtrl.modifyUser()">
+                        Modify
+                    </button>
                 </div>
             </div>
         </div>
