--- a/components/gifsContainer/gifsContainer.html
+++ b/components/gifsContainer/gifsContainer.html
@@ -7,7 +7,7 @@
             ng-repeat="giphy in $ctrl.user.giphy track by giphy.id">
             <img 
                 class="component__view__favourite__photo__gifs" 
-                ng-click="$ctrl.deleteGifsFav(giphy)" 
+                ng-click="$ctrl.deleteGifFav(giphy)" 
                 ng-src="{{giphy.photo}}" 
                 onerror="this.src='/img/no_image.png'">
         </div>
@@ -35,7 +35,7 @@
         </div>
         <button 
             ng-disabled="$ctrl.formSG.$invalid"
-            ng-click="$ctrl.getGifsUser('no')"
+            ng-click="$ctrl.getGifs('no')"
             ng-class="{component__border__green__style__gifs:$ctrl.formSG.$valid}">
             Search Giphy
         </button>
@@ -45,8 +45,8 @@
         gifs='$ctrl.giphyList' 
         arrow-left='$ctrl.ArrowLeft'
         arrow-right='$ctrl.ArrowRight'
-        get-gifs='$ctrl.getGifsUser(offset,direction)'
-        check-gif='$ctrl.checkGifsUser(id)'
-        add-gif-fav="$ctrl.addGifsFav(data)">
+        get-gifs='$ctrl.getGifs(offset,direction)'
+        check-gif='$ctrl.checkGif(id)'
+        add-gif-fav="$ctrl.addGifFav(data)">
     </slider-gifs>
 </div>
