se ha reconfigurado las alturas máximas de la página web

--- a/components/marvelContainer/marvelContainer.html
+++ b/components/marvelContainer/marvelContainer.html
@@ -36,7 +36,7 @@
             </button>
         </div>
     <slider-marvel 
-        style="width:100%; height:500px"
+        style="width:100%; height:65%"
         marvels='$ctrl.marvelList' 
         arrow-left='$ctrl.ArrowLeft'
         arrow-right='$ctrl.ArrowRight'
