--- a/components/marvelContainer/marvelContainerStyle.css
+++ b/components/marvelContainer/marvelContainerStyle.css
@@ -10,7 +10,7 @@
 }
 .component__view__favourite__marvel--container{
     width: 100%;
-    height: 200px;
+    height: 25%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -33,6 +33,7 @@
 }
 .component__user__search__marvel{
     width: 100%;
+    height: 10%;
     margin: 0 auto;
     padding: 10px;
     display: inline-flex;
