--- a/components/gifsContainer/gifsContainer.html
+++ b/components/gifsContainer/gifsContainer.html
@@ -41,7 +41,7 @@
         </button>
     </div>
     <slider-gifs 
-        style="width:100%; height:65%"
+        class="component--slider-gifs"
         gifs='$ctrl.giphyList' 
         arrow-left='$ctrl.ArrowLeft'
         arrow-right='$ctrl.ArrowRight'
