--- a/components/marvelContainer/marvelContainer.html
+++ b/components/marvelContainer/marvelContainer.html
@@ -36,7 +36,7 @@
             </button>
         </div>
     <slider-marvel 
-        style="width:100%; height:65%"
+    class="component--slider-marvel"
         marvels='$ctrl.marvelList' 
         arrow-left='$ctrl.ArrowLeft'
         arrow-right='$ctrl.ArrowRight'
