en el perfil del usuario se ha enmarcado en negrita el telefono y el email

--- a/views/user.html
+++ b/views/user.html
@@ -8,8 +8,8 @@
                     <div class="agend__user__data__personal__name">{{userCtrl.user.name}}</div>
                     <div class="agend__user__data__personal__information">
                         <h3 class="agend__user__data__personal__information--title"><b>Datos Personales</b></h3>
-                        <p>Phone: {{userCtrl.user.phone}} <br>
-                        Email: {{userCtrl.user.email}}</p>
+                        <p><b>Phone:</b> {{userCtrl.user.phone}} <br>
+                        <b>Email:</b> {{userCtrl.user.email}}</p>
                     </div>
                 </div>
             </div>
