--- a/css/home.css
+++ b/css/home.css
@@ -1,130 +1,16 @@
-/*_____USER_____*/
-.user__container{
-    width: 100%;
-    max-height: 800px;
-    display: flex;
-    overflow: scroll;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
-.user__prev{
-    margin: 10px;
-    padding: 10px;
-    width: 300px;
-    height: 150px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    box-sizing: content-box;
-    border: 4px solid white;
-    background-color: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 4px 4px rgba(0,0,0,0.3);
-}
-.user__photo__1{
-    width: 90px;
-    height: 70px;
-    margin: auto;
-    background-color: rgb(169, 224, 18);
-    -webkit-transform: rotate(7deg);
-}
-.user__photo__2{
-    width: 90px;
-    height: 70px;
-    margin: auto;
-    background-color: rgb(31, 122, 207);
-    -webkit-transform: rotate(-7deg);
-}
-.user__photo__img{
-    width: 90px;
-    height: 70px;
-    display: block;
-    object-fit: cover;
-    background-color: white;
-    -webkit-transform: rotate(-7deg);
-}
-.user__prev__name{
-    width: 210px;
-    font-size: 20px;
-    color: white;
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-}
-.user__prev__data{
-    width: 200px;
-    height: 80px;
-    margin: auto;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: flex-end;
-}
-.user__prev__data__{
-    width: 400px;
-    display: inline-flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    color: white;
-}
-.user__prev__data div img{
-    width: 25px;
-    height: 25px;
-    display: block;
-    object-fit: cover;
-    margin-right: 10px;
-}
-.user__prev__button{
-    width: 100px;
-    height: 80px;
-    display: inline-flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: flex-end;
-}
-.user__prev__button button{
-    background-color: transparent;
-    border-width: 0px;
-}
-.user__prev__button button img{
-    width: 33px;
-    object-fit: cover;
-}
-/*_____NAV BAR____*/
-.nav__bar{
-    width: 100%;
-    height: 60px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 2px solid white;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-.nav__bar ul{
-    display: inline-flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    margin: 0;
-}
-.nav__bar ul li{
-    padding: 30px;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 15px;
-}
-/*_____Container General Giphy and Marvel______*/
-.container__R{
+/*_____Container General_____*/
+.container--Right{
     width: 100%;
     max-height: 1000px;
     display: flex;
     flex-flow: column nowrap;
 }
-
+.nav__bar--directive{
+    width:100%; 
+    height:60px; 
+    border-bottom:2px solid white; 
+    background-color:rgba(0, 0, 0, 0.7);
+}
 .button__User{
     width: 100%;
     height: 70px;
