se han comentado todas las funciones y reorganizado el código

--- a/components/userCardPersonal/userCardPersonalStyle.css
+++ b/components/userCardPersonal/userCardPersonalStyle.css
@@ -1,4 +1,4 @@
-/*_____USER_____*/
+/*_user_card_personal_style_container_*/
 .component__user__container{
     width: 100%;
     max-height: 800px;
