--- a/views/user.html
+++ b/views/user.html
@@ -4,10 +4,16 @@
             <div class="agend__user__data__personal__container">
                 <a class="back__user__button" href="#!/">Back</a>
                 <div class="agend__user__data__personal">
-                    <div class="agend__user__data__personal__photo"><img ng-src="{{userCtrl.user.photo}}" onerror="this.src='/img/no_image.png'"></div>
+                    <div class="agend__user__data__personal__photo">
+                        <img 
+                            ng-src="{{userCtrl.user.photo}}" 
+                            onerror="this.src='/img/no_image.png'">
+                    </div>
                     <div class="agend__user__data__personal__name">{{userCtrl.user.name}}</div>
                     <div class="agend__user__data__personal__information">
-                        <h3 class="agend__user__data__personal__information--title"><b>Datos Personales</b></h3>
+                        <h3 class="agend__user__data__personal__information--title">
+                            <b>Datos Personales</b>
+                        </h3>
                         <p><b>Phone:</b> {{userCtrl.user.phone}} <br>
                         <b>Email:</b> {{userCtrl.user.email}}</p>
                     </div>
@@ -18,11 +24,21 @@
             <div class="agend__user__favourite__container">
                 <h3 class="agend__user__favourite--title">
                     <b>Favourite Gifs</b>
-                    <img ng-hide="userCtrl.user.giphy.length == 0" class="agend__user__favourite--remove" src="/img/papelera.png" ng-click="userCtrl.deleteAllType('gifs')">
+                    <img 
+                        ng-hide="userCtrl.user.giphy.length == 0" 
+                        class="agend__user__favourite--remove" 
+                        src="/img/papelera.png" 
+                        ng-click="userCtrl.deleteAllType('gifs')">
                 </h3>
                 <div class="agend__user__favourite__parent">
-                    <div class="agend__user__favourite" ng-repeat="giphy in userCtrl.user.giphy track by giphy.id">
-                        <img class="agend__user__favourite__photo" ng-click="userCtrl.deleteTypeFav('Giphy',giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                    <div 
+                        class="agend__user__favourite" 
+                        ng-repeat="giphy in userCtrl.user.giphy track by giphy.id">
+                        <img 
+                            class="agend__user__favourite__photo" 
+                            ng-click="userCtrl.deleteTypeFav('Giphy',giphy.id)" 
+                            ng-src="{{giphy.photo}}" 
+                            onerror="this.src='/img/no_image.png'">
                     </div>
                 </div>
             </div>
@@ -31,11 +47,21 @@
             <div class="agend__user__favourite__container">
                 <h3 class="agend__user__favourite--title">
                     <b>Favourite Comics</b>
-                    <img ng-hide="userCtrl.user.marvel.length == 0" class="agend__user__favourite--remove" src="/img/papelera.png" ng-click="userCtrl.deleteAllType('marvel')">
+                    <img 
+                        ng-hide="userCtrl.user.marvel.length == 0" 
+                        class="agend__user__favourite--remove" 
+                        src="/img/papelera.png" 
+                        ng-click="userCtrl.deleteAllType('marvel')">
                 </h3>
                 <div class="agend__user__favourite__parent">
-                    <div class="agend__user__favourite" ng-repeat="marvel in userCtrl.user.marvel track by marvel.id">
-                        <img class="agend__user__favourite__photo" ng-click="userCtrl.deleteTypeFav('Marvel',marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
+                    <div 
+                        class="agend__user__favourite" 
+                        ng-repeat="marvel in userCtrl.user.marvel track by marvel.id">
+                        <img 
+                            class="agend__user__favourite__photo" 
+                            ng-click="userCtrl.deleteTypeFav('Marvel',marvel.id)" 
+                            ng-src="{{marvel.photo}}" 
+                            onerror="this.src='/img/no_image.png'">
                     </div>
                 </div>
             </div>
