--- a/components/marvelContainer/marvelContainerStyle.css
+++ b/components/marvelContainer/marvelContainerStyle.css
@@ -6,15 +6,14 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    border-bottom: 2px solid white;
-    background-color: rgba(0, 0, 0, 0.4);
 }
 .component__view__favourite__marvel--container{
     width: 100%;
-    height: 25%;
+    height: 30%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    align-items: center;
     overflow: scroll;
     padding: 10px;
     border-radius: 5px 5px 5px 5px;
@@ -34,25 +33,34 @@
 }
 .component__user__search__marvel{
     width: 100%;
-    height: 10%;
+    min-height: 10%;
+    max-height: 15%;
     margin: 0 auto;
     padding: 10px;
     display: inline-flex;
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
-    overflow: scroll;
 }
 .component__user__search__marvel button{
     width: 170px;
-    height: 35px;
+    height: 45px;
     color: white;
     border-radius: 5px 5px 5px 5px;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.component__user__search__marvel__form{
+    min-width: 60%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 .component__user__search__marvel form input{
-    width: 200px;
+    max-width: 200px;
     height: 35px;
+    margin: 5px;
     border-width: 0px;
     background-color: white;
     border-radius: 5px 5px 5px 5px;
@@ -62,15 +70,15 @@
     padding-left: 5px;
 }
 .component__user__search__select__marvel{
+    max-width: 200px;
+    margin: 5px;
     height: 35px;
-    width: 200px;
-    margin: 20px;
     background-color: white;
 }
 .component__border__green__style__marvel{
     border: 1px solid rgb(70, 209, 15);
 }
 .component--slider-marvel{
-    width:100%; 
-    height:65%;
+    width:100%;
+    height:60%;
 }
