--- a/components/userCardPersonal/userCardPersonalStyle.css
+++ b/components/userCardPersonal/userCardPersonalStyle.css
@@ -1,23 +1,25 @@
 /*_user_card_personal_style_container_*/
 .component__user__container{
-    width: 100%;
+    min-width: 400px;
+    max-width: 100%;
     max-height: 800px;
     display: flex;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     flex-flow: row wrap;
     justify-content: space-around;
 }
 .component__user__prev{
     margin: 10px;
     padding: 10px;
-    width: 300px;
+    width: 350px;
     height: 150px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     box-sizing: content-box;
     border: 4px solid white;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(187, 135, 24, 0.75);
     box-shadow: 0 0 4px 4px rgba(0,0,0,0.3);
 }
 .component__user__photo__1{
@@ -43,7 +45,7 @@
     -webkit-transform: rotate(-7deg);
 }
 .component__user__prev__name{
-    width: 210px;
+    width: 260px;
     font-size: 20px;
     color: white;
     display: flex;
@@ -53,7 +55,7 @@
     font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
 }
 .component__user__prev__data{
-    width: 200px;
+    width: 250px;
     height: 80px;
     margin: auto;
     display: flex;
