--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,48 @@
-/*_____Container General_____*/
+/*__home.html__*/
+.user__card__personal--directive{
+    max-width: 100%;
+    max-height: 800px;
+    font-size: 14px;
+    font-family: NunitoSans Regular;
+    overflow: scroll;
+}
 .container--Right{
     width: 100%;
     max-height: 1000px;
     display: flex;
     flex-flow: column nowrap;
 }
-.nav__bar--directive{
+.nav__bar__search--directive{
     width:100%; 
-    height:60px; 
+    height:60px;
+    font-size: 20px;
+    font-family: NunitoSans Regular;
     border-bottom:2px solid white; 
     background-color:rgba(0, 0, 0, 0.7);
+}
+.personal__form--directive{
+    width: 100%;
+    max-height: 600px;
+    font-size: 15px;
+    font-family: NunitoSans Regular;
+    border-bottom: 2px solid white;
+    background-color: rgba(187, 135, 24, 0.75);
+}
+.gifs__conatiner--directive{
+    width: 100%;
+    height: 800px;
+    font-size: 15px;
+    font-family: NunitoSans Regular;
+    border-bottom: 2px solid white;
+    background-color: rgba(187, 135, 24, 0.75);
+}
+.marvel__container--directive{
+    width: 100%;
+    height: 800px;
+    font-size: 15px;
+    font-family: NunitoSans Regular;
+    border-bottom: 2px solid white;
+    background-color: rgba(187, 135, 24, 0.75);
 }
 .button__User{
     width: 100%;
@@ -24,6 +57,8 @@
     height: 40px;
     width: 100px;
     color: white;
+    font-size: 17px;
+    font-family: NunitoSans Regular;
     background-color: transparent;
 }
 /*_______Ng-Style_______*/
