--- a/views/user.html
+++ b/views/user.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/user.css">
+<!-- //////////////////////////////////////////////////////////// -->
 <div class="container-fluid" ng-cloak>
     <div class="row">
         <div class="col-md-4 col-lg-4">
