--- a/components/personalForm/personalForm.html
+++ b/components/personalForm/personalForm.html
@@ -2,13 +2,15 @@
 <!-- //////////////////////////////////////////////////////////// -->
 <div class="component__view__container" ng-model-options="{allowInvalid: true, debounce: 200}" ng-cloak>
     <form name="$ctrl.form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-        <h3>Name: </h3>
-        <input type="text" placeholder="Name user" ng-required="true" ng-model="$ctrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-        <h3>E-mail: </h3>
-        <input type="email" placeholder="Email user" ng-required="true" ng-model="$ctrl.user.email" ng-maxlength="25" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-        <h3>Phone: </h3>
-        <input type="number" placeholder="Phone user" ng-required="true" ng-model="$ctrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-        <h3>Photo: </h3>
-        <input type="text" placeholder="Photo user" ng-required="true" ng-model="$ctrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+        <label>Name: </label>
+        <input type="text" placeholder="Name user" ng-required="true" ng-model="$ctrl.user.name" ng-minlength="3" ng-maxlength="10" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}"><br>
+        <label>Password: </label>
+        <input type="text" placeholder="Password user" ng-required="true" ng-model="$ctrl.user.password" ng-minlength="8" ng-maxlength="16" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}"><br>
+        <label>E-mail: </label>
+        <input type="email" placeholder="Email user" ng-required="true" ng-model="$ctrl.user.email" ng-maxlength="25" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}"><br>
+        <label>Phone: </label>
+        <input type="number" placeholder="Phone user" ng-required="true" ng-model="$ctrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}"><br>
+        <label>Photo: </label>
+        <input type="text" placeholder="Photo user" ng-required="true" ng-model="$ctrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}"><br>
     </form>
 </div>
